--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
 <!-- <p-button class="p-2" label="login" [routerLink]="'login'"></p-button>
 <p-button class="p-2" label="main"  [routerLink]="'main'"></p-button>
 <p-button class="p-2" label="logout"  (click)="logout()"></p-button> -->
+
+<!-- Navigator routing outlet -->
 <router-outlet></router-outlet>
+
+<!-- Loading spinner placeholder -->
+<!-- class="preloader" -->
+<div>
+  <app-spinner [isSpinnerLoader]="!loading"> </app-spinner>
+</div>
