--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,1 +1,86 @@
-<app-layout></app-layout>
+<div class="container">
+  <p style="font-size: 20px; color: rgb(185, 201, 40); padding: 6px">
+    Date : {{ date | date : "short" }}
+  </p>
+  <P style="text-align: center; font-size: 30px">Home Page</P>
+  <div>
+    <div class="gallery">
+      <a target="_blank" href="img_5terre.jpg">
+        <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400" />
+      </a>
+      <div class="desc">Add a description of the image here</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="img_forest.jpg">
+        <img src="img_forest.jpg" alt="Forest" width="600" height="400" />
+      </a>
+      <div class="desc">Add a description of the image here</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="img_lights.jpg">
+        <img
+          src="img_lights.jpg"
+          alt="Northern Lights"
+          width="600"
+          height="400"
+        />
+      </a>
+      <div class="desc">Add a description of the image here</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="img_mountains.jpg">
+        <img src="img_mountains.jpg" alt="Mountains" width="600" height="400" />
+      </a>
+      <div class="desc">Add a description of the image here</div>
+    </div>
+  </div>
+</div>
+
+
+<div class="container d-flex position-relative pt-4">
+  <p-accordion >
+    <!-- [activeIndex]="0" -->
+    <p-accordionTab>
+      <ng-template pTemplate="header">
+          <span class="flex align-items-center gap-2 w-full">
+              <p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" shape="circle" class="px-2"/>
+              <span class="font-bold white-space-nowrap">Amy Elsner</span>
+              <p-badge value="3" class="ml-auto"  class="px-2"/>
+          </span>
+      </ng-template>
+      <p class="m-0">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+  </p-accordionTab>
+  <p-accordionTab>
+    <ng-template pTemplate="header">
+        <span class="flex align-items-center gap-2 w-full">
+            <p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/onyamalimba.png" shape="circle"  class="px-2" />
+            <span class="font-bold white-space-nowrap">Onyama Limba</span>
+            <p-badge value="4" class="ml-auto"  class="px-2" />
+        </span>
+    </ng-template>
+    <p class="m-0">
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
+        ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Consectetur, adipisci velit, sed quia non numquam eius modi.
+    </p>
+</p-accordionTab>
+<p-accordionTab>
+    <ng-template pTemplate="header">
+        <span class="flex align-items-center gap-2 w-full">
+            <p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/ionibowcher.png" shape="circle"   class="px-2" />
+            <span class="font-bold white-space-nowrap">Ioni Bowcher</span>
+            <p-badge value="2" class="ml-auto"  class="px-2"/>
+        </span>
+    </ng-template>
+    <p class="m-0">
+        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa
+        qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus.
+    </p>
+</p-accordionTab>
+  </p-accordion>
+</div>
