Add existing project files prior to the push to GitHub.

--- a/src/app/pages/users/list-users/list-users.component.html
+++ b/src/app/pages/users/list-users/list-users.component.html
@@ -1,3 +1,5 @@
+<p-card header="User Info">
+
 <div class="card m-3">
   <p-table class="p-3" [value]="users" [tableStyle]="{ 'min-width': '80rem' }">
     <ng-template pTemplate="header">
@@ -52,3 +54,5 @@
   routerLinkActive="router-link-active"
   label="Back"
 ></p-button>
+
+</p-card>
