--- a/src/app/core/_layout/header/header.component.html
+++ b/src/app/core/_layout/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand m-3 p-3" style="background-color: rgb(179, 255, 0)"
-    >Student App
+    >OOO App
   </a>
   <button
     class="navbar-toggler"
@@ -21,8 +21,8 @@
     >
       <ng-template pTemplate="start">
         <img
-          src="https://primefaces.org/cdn/primeng/images/primeng.svg"
-          height="50"
+          src="/assets/images/oil-svg.png"
+          height="40"
           class="mr-2"
         />
         <!-- <p style="font-size: 12px;color: bisque;" aria-label="s">S</p> -->
