Revert "Add existing project files prior to the push to GitHub."
This reverts commit 7dfa41c1720c5202478691b112fb57295da8dff3.

--- a/src/app/core/_layout/footer/footer.component.html
+++ b/src/app/core/_layout/footer/footer.component.html
@@ -1,11 +1,10 @@
 <div class="container flex-center-between">
     <small class="mb-3 mb-md-0 font-weight-bold text-black-50">{{'all.rights' | translate}}</small>
-    <small> <i class="px-2">{{'verasion' | translate}} {{1.2}}</i>  <i class="px-2">{{'support' | translate}} : 92300023</i></small>
+    <small> <i class="px-2">{{'verasion' | translate}}{{1.2}}</i>  <i class="px-2">{{'support' | translate}} : 92300023</i></small>
     <figure class="mt-3">
-      <img src="assets/images/facebook-svg.png" class="logo-elm" >
-      <img src="assets/images/x-svg.png" class="logo-elm" >
-      <img src="assets/images/insta-svg.png" class="logo-elm" >
-      <img src="assets/images/snap-svg.png" class="logo-elm" >
-      <img src="assets/images/whats-svg.png" class="logo-elm" >
+      <img src="assets/images/student-logo.png" class="logo-elm" alt="::Elm::">
+      <img src="assets/images/x-logo.png" class="logo-elm" >
+      <img src="assets/images/insta-logo.png" class="logo-elm" >
+      <img src="assets/images/facebook-logo.png" class="logo-elm" >
     </figure>
   </div>
