--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -1,98 +1,65 @@
-<!-- Section: Design Block -->
-<section class="text-center text-lg-start">
-  <style>
-    .cascading-right {
-      margin-right: -50px;
-    }
 
-    @media (max-width: 991.98px) {
-      .cascading-right {
-        margin-right: 0;
-      }
-    }
-  </style>
-
-  <!-- Jumbotron -->
-  <div class="container py-4">
-    <div class="row g-0 align-items-center">
-      <div class="col-lg-6 mb-5 mb-lg-0">
-        <div class="card cascading-right bg-body-tertiary" style="
-            backdrop-filter: blur(30px);
-            ">
-          <div class="card-body p-5 shadow-5 text-center">
-            <h2 class="fw-bold mb-5">Sign up now</h2>
-            <form>
-              <!-- 2 column grid layout with text inputs for the first and last names -->
-              <div class="row">
-                <div class="col-md-6 mb-4">
-                  <div data-mdb-input-init class="form-outline">
-                    <input type="text" id="form3Example1" class="form-control" />
-                    <label class="form-label" for="form3Example1">First name</label>
-                  </div>
-                </div>
-                <div class="col-md-6 mb-4">
-                  <div data-mdb-input-init class="form-outline">
-                    <input type="text" id="form3Example2" class="form-control" />
-                    <label class="form-label" for="form3Example2">Last name</label>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Email input -->
-              <div data-mdb-input-init class="form-outline mb-4">
-                <input type="email" id="form3Example3" class="form-control" />
-                <label class="form-label" for="form3Example3">Email address</label>
-              </div>
-
-              <!-- Password input -->
-              <div data-mdb-input-init class="form-outline mb-4">
-                <input type="password" id="form3Example4" class="form-control" />
-                <label class="form-label" for="form3Example4">Password</label>
-              </div>
-
-              <!-- Checkbox -->
-              <div class="form-check d-flex justify-content-center mb-4">
-                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
-                <label class="form-check-label" for="form2Example33">
-                  Subscribe to our newsletter
-                </label>
-              </div>
-
-              <!-- Submit button -->
-              <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">
-                Sign up
-              </button>
-
-              <!-- Register buttons -->
-              <div class="text-center">
-                <p>or sign up with:</p>
-                <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-link btn-floating mx-1">
-                  <i class="fab fa-facebook-f"></i>
-                </button>
-
-                <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-link btn-floating mx-1">
-                  <i class="fab fa-google"></i>
-                </button>
-
-                <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-link btn-floating mx-1">
-                  <i class="fab fa-twitter"></i>
-                </button>
-
-                <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-link btn-floating mx-1">
-                  <i class="fab fa-github"></i>
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
+<p-card class="card m-5">
+  <div style="width: 50%; height: 50%"
+    class="d-flex justify-content-center align-items-center">
+    <form style="width: 50%" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <div class="justify-content-start">
+        <img
+          style="width: 250px; height: 250px"
+          class="img-responsive"
+          alt="image"
+          src="assets/images/myimage.jpg"
+        />
       </div>
-
-      <div class="col-lg-6 mb-5 mb-lg-0">
-        <img src="assets/images/oil-change.jpg" class="w-100 rounded-4 shadow-4"
-          alt="" />
+      <div class="form-group">
+        <label class="p-2">Username</label>
+        <input
+          type="text"
+          formControlName="username"
+          class="form-control"
+          placeholder="Enter Username"
+          [ngClass]="{
+            'is-invalid': submitted && userinput.username.errors
+          }"
+        />
+        <small *ngIf="submitted && userinput.username.errors" style="color: red;font-size: 16px;">Username is Required</small>
       </div>
-    </div>
+      <div class="form-group">
+        <label class="p-2">Email</label>
+        <input
+          type="text"
+          formControlName="email"
+          class="form-control"
+          placeholder="Enter email"
+          [ngClass]="{
+            'is-invalid': submitted && userinput.email.errors
+          }"
+        />
+        <small *ngIf="submitted && userinput.email.errors" style="color: red;font-size: 16px;">Email is Required</small>
+      </div>
+      <div class="form-group">
+        <label class="p-2">Password</label>
+        <input
+          type="password"
+          formControlName="password"
+          class="form-control"
+          placeholder="Enter Password"
+          [ngClass]="{
+            'is-invalid': submitted && userinput.password.errors
+          }"
+        />
+        <small *ngIf="submitted && userinput.password.errors" style="color: red;font-size: 16px;">Password is Required</small>
+      </div>
+      <div class="p-2">
+        <p-button type="submit" [disabled]="loading">Sign In</p-button>
+      </div>
+      <div>
+        <p-messages
+          [(value)]="message"
+          class="inline-block text-nowrap"
+        ></p-messages>
+        <label class="p-2">You have an account!  <a routerLink="/login">Go to Login</a></label>
+      </div>
+    </form>
   </div>
-  <!-- Jumbotron -->
-</section>
-<!-- Section: Design Block -->
+</p-card>
